welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:8: error: reassignment to val
else if( die1 = die2 & noDoubles == true )
              ^withoutDoubles:8: error: type mismatch;
 found   : Unit
 required: Int
else if( die1 = die2 & noDoubles == true )
     ^